--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-beautifulsoup4==4.9.3
-bs4==0.0.1
-requests-file==1.5.1
-torch==1.10.1
-transformers==4.21
-validators==0.18.2
-timm==0.5.4
+beautifulsoup4
+bs4
+requests-file
+torch
+transformers
+validators
+timm
